# tft-hybrid-revenue-forecasting

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: baseline_h4.yaml  finbert_h4.yaml  llama3_h4.yaml
docs/: notes.md  repo_plan.md  split_note.md
notebooks/: 01_exploration_placeholder.ipynb
scripts/: fetch_megacap5.py  finbert_preprocess.py  finbert_tft.py  llama3_tft_h4.py  pre_feature.py  prepare_data.py  preprocess_features_megacap5.py  preprocess_finbert_transcripts.py  preprocess_structured_features.py  run_baseline.py  run_finbert.py  run_llama3.py  tft_megacap5_h4_metrics.py  train_finbert_h4.py  train_hybrid_tft.py  train_llama3_h4.py
src/tft_hybrid/: config.py  dataset.py  evaluate.py  fetch.py  merge_text_features.py  structured_features.py  time_utils.py  trainers.py  transcripts.py
src/tft_multihorizon/data/: loaders.py  splits.py
src/tft_multihorizon/evaluation/: metrics.py
src/tft_multihorizon/features/: structured_features.py  text_feature_alignment.py
src/tft_multihorizon/models/: tft_wrapper.py  training.py
src/tft_multihorizon/nlp/: finbert_features.py  llama3_features.py
src/tft_multihorizon/utils/: io.py  seed.py
tests/: test_metrics.py  test_time_utils.py
